fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -723,6 +723,10 @@ textarea {
 	color: rgba(255,255,255,0.5);
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.25em 1em 0 0;
 	padding: 0;
